@@ -1,19 +1,14 @@
 package kawa;
 
-import java.io.*;
 import java.awt.*;
 import java.awt.event.*;
 import java.awt.geom.*;
 import javax.swing.*;
-import javax.swing.event.*;
 import javax.swing.text.*;
-import gnu.text.Path;
 import gnu.mapping.*;
-import gnu.lists.CharBuffer;
 import gnu.kawa.models.Viewable;
 import gnu.kawa.models.Paintable;
 import gnu.kawa.swingviews.SwingDisplay;
-import gnu.kawa.swingviews.SwingContent;
 
 /** A JTextPane for a read-eval-print-loop.  Also creates an
  * out and err PrintWriter so that you can redirect stdout/stderr to
@@ -42,10 +37,10 @@ public class ReplPane extends JTextPane
     addKeyListener(this);
     addFocusListener(document);
 
-    EditorKit kit = getEditorKit();
     setCaretPosition(document.outputMark);
   }
 
+  @Override
   protected EditorKit createDefaultEditorKit() {
     return new ReplEditorKit(this);
   }
@@ -54,6 +49,7 @@ public class ReplPane extends JTextPane
    * Used as a hook to decrement ReplDocument's reference count,
    * and maybe close the document.
    */
+  @Override
   public void removeNotify()
   {
     super.removeNotify();
@@ -61,82 +57,7 @@ public class ReplPane extends JTextPane
       document.close();
   }
 
-  void enter () // FIXME - move to document
-  {
-    // In the future we might handle curses-like applicatons, which
-    // outputMark may be moved backwards.  In that case the normal
-    // case is that caret position >= outputMark and all the intervening
-    // text has style inputStyle, in which case we do:
-    // Find the first character following outputMark that is either
-    // - the final newline in the buffer (in which case insert a newline
-    //   at the end and treat as the following case);
-    // - a non-final newline (in which case pass the intervening text
-    //   and the following newline are stuffed into the in queue,
-    //   and the outputMark is set after the newline);
-    // - a character whose style is not inputStyle is seen (in which
-    //   case the intervening text plus a final newline are stuffed
-    //   into the 'in' queue, and the outputMark is moved to just
-    //   before the non-inputStyle character).
-    // In the second case, if there is more input following the newline,
-    // we defer the rest until the inferior requests a new line.  This
-    // is so any output and prompt can get properly interleaved.
-    // For now, since we don't support backwards movement, we don't
-    // check for inputStyle, in this case.
-
-    // Otherwise, we do similar to Emacs shell mode:
-    // Select the line containing the caret, stripping of any
-    // characters that have prompt style, and add a newline.
-    // That should be sent to the inferior, and copied it before outputMark.
-
-    int pos = getCaretPosition();
-    CharBuffer b = document.content.buffer;
-    int len = b.length() - 1; // Ignore final newline.
-    document.endMark = -1;
-    if (pos >= document.outputMark)
-      {
-        int lineAfterCaret = b.indexOf('\n', pos);
-        if (lineAfterCaret == len)
-          {
-            if (len > document.outputMark && b.charAt(len-1) == '\n')
-              lineAfterCaret--;
-            else
-              document.insertString(len, "\n", null);
-          }
-        document.endMark = lineAfterCaret;
-        // Note we don't actually send the input line to the inferior
-        // directly.  That happens in ReplDocument.checkingPendingInput,
-        // which is invoked by the inferior thread when it is woken up here.
-        // We do it this way to handle interleaving prompts and other output
-        // with multi-line input, including type-ahead.
-        synchronized (document.in_r)
-          {
-            document.in_r.notifyAll();
-          }
-        if (pos <= lineAfterCaret)
-          setCaretPosition(lineAfterCaret+1);
-      }
-    else
-      {
-        int lineBefore = pos == 0 ? 0 : 1 + b.lastIndexOf('\n', pos-1);
-        Element el = document.getCharacterElement(lineBefore);
-        int lineAfter = b.indexOf('\n', pos);
-        // Strip initial prompt:
-        if (el.getAttributes().isEqual(ReplDocument.promptStyle))
-          lineBefore = el.getEndOffset();
-        String str;
-        if (lineAfter < 0)
-          str = b.substring(lineBefore, len)+'\n';
-        else
-          str = b.substring(lineBefore, lineAfter+1);
-        setCaretPosition(document.outputMark);
-        document.write(str, ReplDocument.inputStyle);
-
-	if (document.in_r != null) {
-	  document.in_r.append(str, 0, str.length());
-	}
-      }
-  }
-
+  @Override
   public MutableAttributeSet getInputAttributes()
   {
     return ReplDocument.inputStyle;
@@ -146,7 +67,7 @@ public class ReplPane extends JTextPane
     int code = e.getKeyCode();
     if (code == KeyEvent.VK_ENTER)
       {
-	enter();
+	document.enter();
 	e.consume();
       }
   }
@@ -189,6 +110,7 @@ class ReplEditorKit extends StyledEditorKit {
             {
               return (new ComponentView(elem)
                 {
+                  @Override
                   protected Component createComponent()
                   {
                     AttributeSet attr = getElement().getAttributes();
@@ -223,6 +145,7 @@ class ReplEditorKit extends StyledEditorKit {
       };
   }
 
+  @Override
   public ViewFactory getViewFactory ()
   {
     return factory;
@@ -259,6 +182,7 @@ class PaintableView extends View
       }
   }
 
+  @Override
   public float getAlignment(int axis)
   {
     switch (axis)
